Resolve bugs about user cart